gcc/testsuite/g++.dg/cpp1z/constexpr-lambda14.C
// { dg-options -std=c++14 }

auto l = []() constexpr { return 42; }; // { dg-error "constexpr" }

